Adds AI generated Javadoc